5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1714_2525.log
== TEST (2019-05-15 08:16:35) 
-- CODE:
from math import *
n = int(input("Numero: "))
a = 0 #variavel acumuladora(qtd. de divisores)
cont = 0 #variavel contadora
v = 1
while (n % v == 0):
	print(v)
	v = v + 1
	a = a + 1
if (n == 1):
	print(1, "divisor")
if (n % v != 0):
	v = v + 1
	n = n // v 
	a = a + 1
	print(v)
		print(a, "divisores")

		
	
	
	
		
	
	

-- ERROR:
File "XXXX", line 17
    print(a, "divisores")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:16:42) 
-- CODE:
from math import *
n = int(input("Numero: "))
a = 0 #variavel acumuladora(qtd. de divisores)
cont = 0 #variavel contadora
v = 1
while (n % v == 0):
	print(v)
	v = v + 1
	a = a + 1
if (n == 1):
	print(1, "divisor")
if (n % v != 0):
	v = v + 1
	n = n // v 
	a = a + 1
	print(v)
	print(a, "divisores")

		
	
	
	
		
	
	

-- OUTPUT:
1
2
3
4
6
5 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:17:31) 
-- CODE:
from math import *
n = int(input("Numero: "))
a = 0 #variavel acumuladora(qtd. de divisores)
cont = 0 #variavel contadora
v = 1
while (n % v == 0):
	print(v)
	v = v + 1
	a = a + 1
	if (n % v != 0):
		v = v + 1
		n = n // v 
		a = a + 1
		print(v)
		print(a, "divisores")
if (n == 1):
	print(1, "divisor")

		
	
	
	
		
	
	

-- OUTPUT:
1
2
3
4
6
5 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:21:06) 
-- CODE:
from math import *
n = int(input("Numero: "))
a = 0 #variavel acumuladora(qtd. de divisores)
cont = 0 #variavel contadora
v = 1
while (n % v == 0):
	print(v)
	v = v + 1
	a = a + 1
if (n % v != 0):
	v = v + 1
	n = n // v 
	a = a + 1
	print(v)
	print(a, "divisores")
if (n == 1):
	print(1, "divisor")

		
	
	
	
		
	
	

-- OUTPUT:
1
2
3
4
6
5 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:25:04) 
-- CODE:
from math import *
n = int(input("Numero: "))
a = 0 #variavel acumuladora(qtd. de divisores)
cont = 0 #variavel contadora
v = 1
while (n % v == 0):
	print(v)
	v = v + 1
	a = a + 1
	if (n % v != 0):
		a = a + 1
		print(v)
		print(a, "divisores")
if (n == 1):
	print(1, "divisor")

		
	
	
	
		
	
	

-- OUTPUT:
1
2
3
4
5
5 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:31:00) 
-- CODE:
from math import *
n = int(input("Numero: "))
a = 0 #variavel acumuladora(qtd. de divisores)
cont = 0 #variavel contadora
v = 1
while (n % v == 0):
	print(v)
	v = v + 1
	a = a + 1
	if (n % v != 0):
		v = v + 1	
if (v == n):
	print(a, "divisores")
if (n == 1):
	print(1, "divisor")

		
	
	
	
		
	
	

-- OUTPUT:
1
2
3
4
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:45:21) 
-- CODE:
from math import *
n = int(input("Numero: "))
a = 0 #variavel acumuladora(qtd. de divisores)
cont = 0 #variavel contadora
v = 1
while (n % v == 0):
	print(v)
	v = v + 1
	a = a + 1
	if (n % v != 0):
		v = v + 1	
if (v == n):
	print(a, "divisores")
if (n == 1):
	print(1, "divisor")

		
	
	
	
		
	
	

-- OUTPUT:
1
2
3
4
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:46:29) 
-- CODE:
from math import *
n = int(input("Numero: "))
a = 0 #variavel acumuladora(qtd. de divisores)
cont = 0 #variavel contadora
v = 1
while (n % v == 0):
	print(v)
	v = v + 1
	a = a + 1
	if (n % v != 0):
		print(v)
		v = v + 1	
if (v == n):
	print(a, "divisores")
if (n == 1):
	print(1, "divisor")

		
	
	
	
		
	
	

-- OUTPUT:
1
2
3
4
5
6
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
